--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,44 @@ body {
     font-size: 18px;
     box-shadow: 0 6px 15px rgba(0,0,0,0.15);
 }
+
+.form-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    gap: 10px;
+    margin-bottom: 25px;
+}
+
+.data-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: white;
+}
+
+.data-table th {
+    background: #0d6efd;
+    color: white;
+    padding: 12px;
+}
+
+.data-table td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+
+.data-table button {
+    padding: 6px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.data-table button:first-child {
+    background: #ffc107;
+}
+
+.data-table button:last-child {
+    background: #dc3545;
+    color: white;
+}
